--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     </div>
 
     <div class="card">
-      <h1>Get insights that help your business grow.</h1>
+      <h1>Get <span>insights</span> that help your business grow.</h1>
       <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer 
         experience, and overall efficiency.</p>
       
         <ul>
-          <li>10k+ companies</li>
-          <li>314 templates</li>
-          <li>12m+ queries</li>
+          <li><span>10k+</span> companies</li>
+          <li><span>314</span> templates</li>
+          <li><span>12M+</span> queries</li>
         </ul>
     </div>
   </div>
